--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amne-todo",
+  "name": "minimum-react-redux-firestore",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
