--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,json,css}": [
+      "eslint --fix",
       "prettier --write",
       "git add"
     ]
@@ -53,12 +54,16 @@
     "@storybook/addons": "^4.0.12",
     "@storybook/react": "^4.0.12",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.5.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-flowtype": "^3.2.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
@@ -69,6 +74,11 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
+    "stylelint": "^9.10.1",
+    "stylelint-config-prettier": "^4.0.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.5.2",
     "webpack": "^4.27.1",
     "webpack-build-notifier": "^0.1.30",
     "webpack-cli": "^3.1.2",
